fix label positioning, and update Application1.html so menu icons don't get cutoff when they expand.
git-svn-id: http://svn.dojotoolkit.org/src@2235 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/trunk/src/widget/templates/HtmlFisheyeList.css
+++ b/trunk/src/widget/templates/HtmlFisheyeList.css
@@ -4,6 +4,7 @@
 	border: 2px solid #666;
 	padding: 2px;
 	text-align: center;
+	position: absolute;
 }
 
 .dojoHtmlFisheyeListItemImage {
